--- a/src/main/resources/templates/checklistFormPage.html
+++ b/src/main/resources/templates/checklistFormPage.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/checklist/add">Checklist Add</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/checklist/list">Checklist List</a>
+                </li>
             </ul>
         </div>
     </div>
