--- a/src/main/resources/templates/checklistFormPage.html
+++ b/src/main/resources/templates/checklistFormPage.html
@@ -9,6 +9,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a href="#" class="navbar-brand">PURCHASES</a>
@@ -19,7 +20,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Checklist Completed</a>
+                    <a class="nav-link" href="/checklist/archivedList">Checklist Completed</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Checklist To Do</a>
