--- a/src/main/resources/templates/navigator.html
+++ b/src/main/resources/templates/navigator.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Checklist Completed</a>
+                    <a class="nav-link" href="/checklist/archivedList">Checklist Completed</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Checklist To Do</a>
